# Zindi-AI-Kenyan-Clinical-Reasoning-Challenge

./: .dockerignore  .env  Dockerfile  README.md  clinician.ipynb  main.py  pyproject.toml  requirements.txt
Data/: optimized_test_cleaned.csv  optimized_test_raw.csv  optimizedv2_test_cleaned.csv  optimizedv2_test_raw_with_prompt.csv
codebase/: v6-zindi-kenya-clinical-reasoning.ipynb
src/: app.py  cli_runner,py  data_loader.py  evaluate.py  finetune.py  gemini_client.py  langchain_pipeline.py  mlflow_tracking.py  prepare_finetune_dataset.py  prompt_templates.py  summarizer.py
tests/: test_cli_runner.py  test_summarizer.py
