[project]
name = "kenya-clinicians"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain-community>=0.3.26",
    "langchain-ollama>=0.3.3",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
]
